MBS-8741 remove sample apps