@@ -2,30 +2,38 @@
 
 import com.android.build.gradle.AppPlugin
 import com.android.build.gradle.BaseExtension
+import com.android.build.gradle.LibraryExtension
 import com.android.build.gradle.LibraryPlugin
-import com.avito.instrumentation.InstrumentationTestsPlugin
-import com.avito.instrumentation.configuration.InstrumentationPluginConfiguration.GradleInstrumentationPluginConfiguration
-import com.avito.instrumentation.reservation.request.Device
-import com.avito.instrumentation.reservation.request.Device.CloudEmulator
-import com.avito.kotlin.dsl.getOptionalStringProperty
-import com.avito.utils.gradle.KubernetesCredentials
-import com.avito.utils.gradle.KubernetesCredentials.Service
-import com.avito.utils.gradle.kubernetesCredentials
+import com.android.build.gradle.internal.tasks.factory.dependsOn
+import com.jfrog.bintray.gradle.BintrayExtension
+import com.jfrog.bintray.gradle.BintrayExtension.PackageConfig
+import com.jfrog.bintray.gradle.BintrayExtension.VersionConfig
+import io.gitlab.arturbosch.detekt.Detekt
 import org.jetbrains.kotlin.gradle.plugin.KotlinBasePluginWrapper
+import org.jetbrains.kotlin.gradle.plugin.KotlinPluginWrapper
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
-buildscript {
-    dependencies {
-        classpath("com.avito.android:buildscript")
-    }
-}
-
 plugins {
+    /**
+     * https://docs.gradle.org/current/userguide/base_plugin.html
+     * base plugin added to add wiring on check->build tasks for detekt
+     */
+    base
     id("org.jetbrains.kotlin.jvm") apply false
     id("com.android.application") apply false
-    id("com.avito.android.instrumentation-tests") apply false
-    id("com.avito.android.impact")
-    id("com.avito.android.build-verdict")
+    id("io.gitlab.arturbosch.detekt")
+    id("com.autonomousapps.dependency-analysis") apply false
+    id("com.jfrog.bintray") version "1.8.4" apply false
+}
+
+buildscript {
+    configurations.classpath {
+        resolutionStrategy {
+            // com.autonomousapps.dependency-analysis depends on older version of okio, and it's resolved for
+            // our instrumentation-tests plugin in subprojects in runtime
+            force(Dependencies.okio)
+        }
+    }
 }
 
 /**
@@ -35,13 +43,82 @@ plugins {
 val buildTools = "29.0.3"
 val javaVersion = JavaVersion.VERSION_1_8
 val compileSdk = 29
+val infraVersion: Provider<String> = providers.gradleProperty("infraVersion").forUseAtConfigurationTime()
+val detektVersion: Provider<String> = providers.systemProperty("detektVersion").forUseAtConfigurationTime()
+val artifactoryUrl = providers.gradleProperty("artifactoryUrl").forUseAtConfigurationTime()
+val projectVersion = providers.gradleProperty("projectVersion").forUseAtConfigurationTime()
+val kotlinVersion = providers.systemProperty("kotlinVersion").forUseAtConfigurationTime()
+val androidGradlePluginVersion = providers.systemProperty("androidGradlePluginVersion").forUseAtConfigurationTime()
+val publishToArtifactoryTask = tasks.register<Task>("publishToArtifactory") {
+    group = "publication"
+    doFirst {
+        requireNotNull(artifactoryUrl.orNull) {
+            "Property artifactoryUrl is required for publishing"
+        }
+    }
+}
+
+val publishReleaseTaskName = "publishRelease"
+
+val finalProjectVersion: String = System.getProperty("avito.project.version").let { env ->
+    if (env.isNullOrBlank()) projectVersion.get() else env
+}
+
+if (gradle.startParameter.taskNames.contains("buildHealth")) {
+    // Reasons to disabling by default:
+    // The plugin schedules heavy LocateDependenciesTask tasks even without analysis
+    apply(plugin = "com.autonomousapps.dependency-analysis")
+}
+
+dependencies {
+    add("detektPlugins", "io.gitlab.arturbosch.detekt:detekt-formatting:${detektVersion.get()}")
+}
 
 subprojects {
-    plugins.withType<AppPlugin> {
-        configure<BaseExtension> {
-            packagingOptions {
-                exclude("META-INF/*.kotlin_module")
-            }
+    group = "com.avito.android"
+    version = finalProjectVersion
+
+    /**
+     * https://www.jetbrains.com/help/teamcity/build-script-interaction-with-teamcity.html#BuildScriptInteractionwithTeamCity-ReportingBuildNumber
+     */
+    val teamcityPrintVersionTask = tasks.register("teamcityPrintReleasedVersion") {
+        group = "publication"
+        description = "Prints teamcity service message to display released version as build number"
+
+        doLast {
+            logger.lifecycle("##teamcity[buildNumber '$finalProjectVersion']")
+        }
+    }
+
+    tasks.register(publishReleaseTaskName) {
+        group = "publication"
+        finalizedBy(teamcityPrintVersionTask)
+    }
+
+    plugins.withType<LibraryPlugin> {
+        val libraryExtension = this@subprojects.extensions.getByType<LibraryExtension>()
+
+        val sourcesTask = tasks.register<Jar>("sourcesJar") {
+            archiveClassifier.set("sources")
+            from(libraryExtension.sourceSets["main"].java.srcDirs)
+        }
+
+        val publishingVariant = "release"
+
+        plugins.withType<MavenPublishPlugin> {
+            libraryExtension.libraryVariants
+                .matching { it.name == publishingVariant }
+                .whenObjectAdded {
+                    extensions.getByType<PublishingExtension>().apply {
+                        publications {
+                            register<MavenPublication>(publishingVariant) {
+                                from(components.getAt(publishingVariant))
+                                artifact(sourcesTask.get())
+                            }
+                        }
+                    }
+                    configureBintray(publishingVariant)
+                }
         }
     }
 
@@ -75,209 +152,260 @@ subprojects {
         }
     }
 
-    plugins.withType<InstrumentationTestsPlugin> {
-        extensions.getByType<GradleInstrumentationPluginConfiguration>().apply {
-
-            //todo make these params optional features in plugin
-            reportApiUrl = project.getOptionalStringProperty("avito.report.url") ?: "http://stub"
-            reportApiFallbackUrl = project.getOptionalStringProperty("avito.report.fallbackUrl") ?: "http://stub"
-            reportViewerUrl = project.getOptionalStringProperty("avito.report.viewerUrl") ?: "http://stub"
-            registry = project.getOptionalStringProperty("avito.registry", "registry") ?: "registry"
-            sentryDsn = project.getOptionalStringProperty("avito.instrumentaion.sentry.dsn")
-                ?: "http://stub-project@stub-host/0"
-            slackToken = project.getOptionalStringProperty("avito.slack.token") ?: "stub"
-            fileStorageUrl = project.getOptionalStringProperty("avito.fileStorage.url") ?: "http://stub"
-
-            logcatTags = setOf(
-                "UITestRunner:*",
-                "ActivityManager:*",
-                "ReportTestListener:*",
-                "StorageJsonTransport:*",
-                "TestReport:*",
-                "VideoCaptureListener:*",
-                "TestRunner:*",
-                "SystemDialogsManager:*",
-                "AndroidJUnitRunner:*",
-                "ito.android.de:*", //по этому тэгу система пишет логи об использовании hidden/restricted api https://developer.android.com/distribute/best-practices/develop/restrictions-non-sdk-interfaces
-                "*:E"
-            )
-
-            instrumentationParams = mapOf(
-                "videoRecording" to "failed",
-                "jobSlug" to "FunctionalTests"
-            )
-
-
-            val runAllFilterName = "runAll"
-            filters.register(runAllFilterName)
-
-            filters.register("dynamicFilter") {
-                val includeAnnotation: String? = project.getOptionalStringProperty("includeAnnotation", true)
-                if (includeAnnotation != null) {
-                    fromSource.includeByAnnotations(setOf(includeAnnotation))
-                }
-                val includePrefix: String? = project.getOptionalStringProperty("includePrefix", true)
-                if (includePrefix != null) {
-                    fromSource.includeByPrefixes(setOf(includePrefix))
-                }
-            }
-
-            filters.register("ci") {
-                fromSource.excludeFlaky = true
-            }
-
-            val defaultFilter = "default"
-            val customFilter: String = project.getOptionalStringProperty("customFilter", defaultFilter)
-
-            configurationsContainer.register("Local") {
-                reportSkippedTests = true
-                filter = customFilter
-
-                targetsContainer.register("api28") {
-                    deviceName = "API28"
-
-                    scheduling {
-                        quota {
-                            retryCount = 1
-                            minimumSuccessCount = 1
-                        }
-
-                        testsCountBasedReservation {
-                            device = Device.LocalEmulator.device(28, "Android_SDK_built_for_x86_64")
-                            maximum = 1
-                            minimum = 1
-                            testsPerEmulator = 1
-                        }
-                    }
-                }
-            }
-
-            val credentials = project.kubernetesCredentials
-            if (credentials is Service || credentials is KubernetesCredentials.Config) {
-
-                val registry = project.providers.gradleProperty("avito.registry")
-                    .forUseAtConfigurationTime()
-                    .orNull
-
-                val emulator22 = CloudEmulator(
-                    name = "api22",
-                    api = 22,
-                    model = "Android_SDK_built_for_x86",
-                    image = "${emulatorImage(registry, 22)}:740eb9a948",
-                    cpuCoresRequest = "1",
-                    cpuCoresLimit = "1.3",
-                    memoryLimit = "4Gi"
-                )
-
-                val emulator29 = CloudEmulator(
-                    name = "api29",
-                    api = 29,
-                    model = "Android_SDK_built_for_x86_64",
-                    image = "${emulatorImage(registry, 29)}:915c1f20be",
-                    cpuCoresRequest = "1",
-                    cpuCoresLimit = "1.3",
-                    memoryLimit = "4Gi"
-                )
-
-                configurationsContainer.register("ui") {
-                    reportSkippedTests = true
-                    filter = customFilter
-
-                    targetsContainer.register("api22") {
-                        deviceName = "API22"
-
-                        scheduling {
-                            quota {
-                                retryCount = 1
-                                minimumSuccessCount = 1
-                            }
-
-                            testsCountBasedReservation {
-                                device = emulator22
-                                maximum = 50
-                                minimum = 2
-                                testsPerEmulator = 3
-                            }
-                        }
-                    }
-
-                    targetsContainer.register("api29") {
-                        deviceName = "API29"
-
-                        scheduling {
-                            quota {
-                                retryCount = 1
-                                minimumSuccessCount = 1
-                            }
-
-                            testsCountBasedReservation {
-                                device = emulator29
-                                maximum = 50
-                                minimum = 2
-                                testsPerEmulator = 3
-                            }
-                        }
-                    }
-                }
-
-                configurationsContainer.register("uiDebug") {
-                    reportSkippedTests = false
-                    enableDeviceDebug = true
-                    filter = customFilter
-
-                    targetsContainer.register("api29") {
-                        deviceName = "API29"
-
-                        scheduling {
-                            quota {
-                                retryCount = 1
-                                minimumSuccessCount = 1
-                            }
-
-                            testsCountBasedReservation {
-                                device = emulator29
-                                maximum = 1
-                                minimum = 1
-                                testsPerEmulator = 1
-                            }
-                        }
-                    }
-                }
-
-            }
-        }
-    }
-
     plugins.withType<KotlinBasePluginWrapper> {
         this@subprojects.run {
             tasks {
                 withType<KotlinCompile> {
                     kotlinOptions {
                         jvmTarget = javaVersion.toString()
-                        allWarningsAsErrors = false // we use deprecation a lot, and it's a compiler warning
+                        allWarningsAsErrors = true
+                        freeCompilerArgs = freeCompilerArgs + "-Xopt-in=kotlin.RequiresOptIn"
                     }
                 }
             }
 
-            dependencies(closureOf<DependencyHandler> {
+            dependencies {
                 add("implementation", Dependencies.kotlinStdlib)
-            })
+            }
+        }
+    }
+
+    plugins.withId("kotlin-android") {
+        configureJunit5Tests()
+    }
+
+    // todo more precise configuration for gradle plugins, no need for gradle testing in common kotlin modules
+    plugins.withId("kotlin") {
+
+        configureJunit5Tests()
+
+        extensions.getByType<JavaPluginExtension>().run {
+            withSourcesJar()
+        }
+
+        this@subprojects.tasks {
+            withType<Test> {
+                systemProperty(
+                    "kotlinVersion",
+                    plugins.getPlugin(KotlinPluginWrapper::class.java).kotlinPluginVersion
+                )
+                systemProperty("compileSdkVersion", compileSdk)
+                systemProperty("buildToolsVersion", buildTools)
+                systemProperty("androidGradlePluginVersion", androidGradlePluginVersion.get())
+
+                /**
+                 * IDEA добавляет специальный init script, по нему понимаем что запустили в IDE
+                 * используется в `:test-project`
+                 */
+                systemProperty(
+                    "isInvokedFromIde",
+                    gradle.startParameter.allInitScripts.find { it.name.contains("ijtestinit") } != null
+                )
+
+                systemProperty("isTest", true)
+
+                systemProperty(
+                    "junit.jupiter.execution.timeout.default",
+                    TimeUnit.MINUTES.toSeconds(10)
+                )
+            }
+        }
+
+        dependencies {
+            add("testImplementation", gradleTestKit())
+        }
+    }
+
+    plugins.withId("java-test-fixtures") {
+        dependencies {
+            add("testFixturesImplementation", Dependencies.Test.junitJupiterApi)
+            add("testFixturesImplementation", Dependencies.Test.truth)
+        }
+    }
+
+    tasks.withType<Test> {
+        systemProperty("rootDir", "${project.rootDir}")
+
+        val testProperties = listOf(
+            "avito.kubernetes.url",
+            "avito.kubernetes.token",
+            "avito.kubernetes.cert",
+            "avito.kubernetes.namespace",
+            "avito.slack.test.channel",
+            "avito.slack.test.token",
+            "avito.slack.test.workspace",
+            "avito.elastic.endpoint",
+            "avito.elastic.indexpattern",
+            "teamcityBuildId"
+        )
+        testProperties.forEach { key ->
+            val property = if (project.hasProperty(key)) {
+                project.property(key)!!.toString()
+            } else {
+                ""
+            }
+            systemProperty(key, property)
+        }
+    }
+
+    plugins.withType<JavaGradlePluginPlugin> {
+        extensions.getByType<GradlePluginDevelopmentExtension>().run {
+            isAutomatedPublishing = false
+        }
+    }
+
+    plugins.withType<MavenPublishPlugin> {
+        extensions.getByType<PublishingExtension>().run {
+
+            publications {
+                // todo should not depend on ordering
+                if (plugins.hasPlugin("kotlin")) {
+                    val publicationName = "maven"
+
+                    register<MavenPublication>(publicationName) {
+                        from(components["java"])
+                        afterEvaluate {
+                            artifactId = this@subprojects.getOptionalExtra("artifact-id") ?: this@subprojects.name
+                        }
+                    }
+
+                    afterEvaluate {
+                        configureBintray(publicationName)
+                    }
+                }
+            }
+
+            repositories {
+                if (!artifactoryUrl.orNull.isNullOrBlank()) {
+                    maven {
+                        name = "artifactory"
+                        setUrl("${artifactoryUrl.orNull}/libs-release-local")
+                        credentials {
+                            username = project.getOptionalExtra("avito.artifactory.user")
+                            password = project.getOptionalExtra("avito.artifactory.password")
+                        }
+                    }
+                }
+            }
+        }
+
+        if (!artifactoryUrl.orNull.isNullOrBlank()) {
+            publishToArtifactoryTask.configure {
+                dependsOn(tasks.named("publishAllPublicationsToArtifactoryRepository"))
+            }
         }
     }
 }
 
-//todo registry value not respected here, it's unclear how its used (in fact concatenated in runner)
-//todo pass whole image, and not registry
-fun emulatorImage(registry: String?, api: Int): String {
-    return if (registry.isNullOrBlank()) {
-        "avitotech/android-emulator-$api"
+val Project.sourceSets: SourceSetContainer
+    get() = (this as ExtensionAware).extensions.getByName("sourceSets") as SourceSetContainer
+
+val SourceSetContainer.main: NamedDomainObjectProvider<SourceSet>
+    get() = named<SourceSet>("main")
+
+fun Project.getOptionalExtra(key: String): String? {
+    return if (extra.has(key)) {
+        (extra[key] as? String)?.let { if (it.isBlank()) null else it }
     } else {
-        "android/emulator-$api"
+        null
+    }
+}
+
+fun Project.configureBintray(vararg publications: String) {
+    extensions.findByType<BintrayExtension>()?.run {
+
+        // todo fail fast with meaningful error message
+        user = getOptionalExtra("avito.bintray.user")
+        key = getOptionalExtra("avito.bintray.key")
+
+        setPublications(*publications)
+
+        dryRun = false
+        publish = true
+        // You can use override for inconsistently uploaded artifacts
+        // Examples of issues:
+        // - NoHttpResponseException: api.bintray.com:443 failed to respond
+        //   (https://github.com/bintray/gradle-bintray-plugin/issues/325)
+        // - Could not upload to 'https://api.bintray.com/...':
+        //   HTTP/1.1 405 Not Allowed 405 Not Allowed405 Not Allowednginx
+        override = false
+        pkg(
+            closureOf<PackageConfig> {
+                repo = "maven"
+                userOrg = "avito"
+                name = "avito-android"
+                setLicenses("mit")
+                vcsUrl = "https://github.com/avito-tech/avito-android.git"
+
+                version(
+                    closureOf<VersionConfig> {
+                        name = finalProjectVersion
+                    }
+                )
+            }
+        )
+    }
+
+    tasks.named(publishReleaseTaskName).configure {
+        dependsOn(tasks.named("bintrayUpload"))
+    }
+}
+
+fun Project.configureJunit5Tests() {
+    dependencies {
+        add("testImplementation", Dependencies.Test.junitJupiterApi)
+
+        add("testRuntimeOnly", Dependencies.Test.junitPlatformRunner)
+        add("testRuntimeOnly", Dependencies.Test.junitPlatformLauncher)
+        add("testRuntimeOnly", Dependencies.Test.junitJupiterEngine)
+
+        add("testImplementation", Dependencies.Test.truth)
+
+        if (name != "truth-extensions") {
+            add("testImplementation", project(":subprojects:common:truth-extensions"))
+        }
+    }
+
+    tasks.withType<Test> {
+        useJUnitPlatform()
+        maxParallelForks = 8
+        failFast = true
+
+        /**
+         * fix for retrofit `WARNING: Illegal reflective access by retrofit2.Platform`
+         * see square/retrofit/issues/3341
+         */
+        jvmArgs = listOf("--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED")
     }
 }
 
 tasks.withType<Wrapper> {
-    // Sources unavailable with BIN until https://youtrack.jetbrains.com/issue/IDEA-231667 resolved
+    // sources unavailable with BIN until https://youtrack.jetbrains.com/issue/IDEA-231667 resolved
     distributionType = Wrapper.DistributionType.ALL
     gradleVersion = "6.8.2"
 }
+
+val detektAll = tasks.register<Detekt>("detektAll") {
+    description = "Runs over whole code base without the starting overhead for each module."
+    parallel = true
+    setSource(files(projectDir))
+
+    /**
+     * About config:
+     * yaml is a copy of https://github.com/detekt/detekt/blob/master/detekt-core/src/main/resources/default-detekt-config.yml
+     * all rules are disabled by default, enabled one by one
+     */
+    config.setFrom(files(project.rootDir.resolve("detekt.yml")))
+    buildUponDefaultConfig = false
+
+    include("**/*.kt")
+    include("**/*.kts")
+    exclude("**/resources/**")
+    exclude("**/build/**")
+    reports {
+        xml.enabled = false
+        html.enabled = false
+    }
+}
+
+tasks.named("check").dependsOn(detektAll)
